# cvmbuild

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/cvmbuild-cli/: Cargo.toml
crates/cvmbuild-cli/assets/dracut/: 56-dm-blkid.rules  module-setup.sh  verity-root.sh
crates/cvmbuild-cli/src/: cache.rs  kawiri_cache.rs  main.rs
crates/cvmbuild-config/: Cargo.toml
crates/cvmbuild-config/src/: lib.rs
crates/cvmbuild-config/src/assert/: catalog.rs  mod.rs  profiles.rs  types.rs
crates/cvmbuild-config/src/assert/checks/: binary.rs  firewall.rs  kernel.rs  logging.rs  mod.rs  modules.rs  mount.rs  network.rs  service.rs  structural.rs  verity.rs
crates/cvmbuild-image/: Cargo.toml
crates/cvmbuild-image/src/: cpio.rs  ext4.rs  gpt.rs  initrd.rs  kernel.rs  lib.rs  manifest.rs  squashfs.rs  verity.rs
crates/cvmbuild-measure/: Cargo.toml
crates/cvmbuild-measure/src/: lib.rs
crates/cvmbuild-measure/src/common/: buf.rs  guid.rs  mod.rs
crates/cvmbuild-measure/src/snp/: gctx.rs  guest.rs  mod.rs  ovmf.rs  sev_hashes.rs  types.rs  vmsa.rs
crates/cvmbuild-measure/src/tdx/: authenticode.rs  mod.rs  mrtd.rs  rtmr.rs  tdvf.rs  types.rs
crates/cvmbuild-measure/tests/fixtures/: README.md
crates/cvmbuild-oci/: Cargo.toml
crates/cvmbuild-oci/src/: lib.rs
crates/cvmbuild-rootfs/: Cargo.toml
crates/cvmbuild-rootfs/src/: lib.rs  services.rs
crates/cvmbuild-squashfs/: Cargo.toml
crates/cvmbuild-squashfs/examples/: compare.rs  inode_stats.rs  mkfs.rs
crates/cvmbuild-squashfs/src/: directory.rs  format.rs  fragment.rs  inode.rs  lib.rs  reader.rs  writer.rs
crates/cvmbuild-squashfs/tests/: mount_test.rs
