[package]
name = "cvmbuild-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cvmbuild"
path = "src/main.rs"

[dependencies]
cvmbuild-config = { workspace = true }
cvmbuild-oci = { workspace = true }
cvmbuild-rootfs = { workspace = true }
cvmbuild-image = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hf-hub = { workspace = true }

# Embedded apt cache proxy
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
