[package]
name = "cvmbuild-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cvmbuild"
path = "src/main.rs"

[dependencies]
cvmbuild-config = { workspace = true }
cvmbuild-oci = { workspace = true }
cvmbuild-rootfs = { workspace = true }
cvmbuild-image = { workspace = true }
cvmbuild-squashfs = { path = "../cvmbuild-squashfs" }
gptman = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
hf-hub = { workspace = true }

[dev-dependencies]
tempfile = "3"
