[package]
name = "cvmbuild-squashfs"
version = "0.1.0"
edition.workspace = true
description = "Standalone pure-Rust squashfs 4.0 writer for CVM images"

[dependencies]
anyhow = "1"
rayon = "1"
sha2 = "0.10"
zstd = { version = "0.13", default-features = false }

[dev-dependencies]
sha2 = "0.10"
tempfile = "3"
